--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="StringConexao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validador.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
