--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Criptografia.cs" />
     <Compile Include="StringConexao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validador.cs" />
