--- a/DesafioTecnico/Web.config
+++ b/DesafioTecnico/Web.config
@@ -16,11 +16,9 @@
       </controls>
     </pages>
   </system.web>
-
-	<connectionStrings>
-		<add name="CadastroUsuarioConnectionString" connectionString="Data Source=10.10.1.60;;Initial Catalog=Cadastro_Usuario;Integrated Security=True;Encrypt=False;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
-	
+  <connectionStrings>
+    <add name="CadastroUsuarioConnectionString" connectionString="Data Source=JARVIS\SQLEXPRESS;Initial Catalog=Cadastro_Usuario;Integrated Security=True;Encrypt=False;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
