--- a/DesafioTecnico/Web.config
+++ b/DesafioTecnico/Web.config
@@ -17,7 +17,7 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="CadastroUsuarioConnectionString" connectionString="Data Source=JARVIS\SQLEXPRESS;Initial Catalog=Cadastro_Usuario;Integrated Security=True;Encrypt=False;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="CadastroUsuarioConnectionString" connectionString="Data Source=10.10.1.60;Initial Catalog=Cadastro_Usuario;Integrated Security=True;Encrypt=False;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -31,7 +31,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
