--- a/DesafioTecnico.Tests/DesafioTecnico.Tests.csproj
+++ b/DesafioTecnico.Tests/DesafioTecnico.Tests.csproj
@@ -57,9 +57,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Usuario\Usuario.csproj">
+      <Project>{214B692A-F578-4FBF-B850-70900E851712}</Project>
+      <Name>Usuario</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
